<resources>
    <string name="app_name">Sports Court</string>

    <!--    AUTHENTICATION-->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Phone_no">Phone Number</string>
    <string name="already_account">Already Registered? Sign In</string>
    <string name="create_acc">Create an account</string>
    <string name="forgot_pass">forgot password?</string>


    <!--    SPORTS NAME -->
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="table_tennis">Table Tennis</string>
    <string name="badminton">Badminton</string>
    <string name="squash">Squash</string>


    <!--SUGGESTIONS FRAGMENTS-->
    <string name="suggest_box">maximum 200 characters</string>


    <!--    SETTINGS FRAGMENTS-->
    <string name="my_posts">My Posts</string>
    <string name="change_pass">Change Password</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign Out</string>

    <!--    TITLES-->
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="comment">Comments</string>
    <string name="interest_selection">Your Interest</string>

    <string name="write_something">Write something...</string>
    <string name="add_comment">Add Comment</string>
    <string name="booking_confirmation">Please confirm your booking.</string>

</resources>
