<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Authentication.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="choco"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <EditText

            android:id="@+id/Full_Name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="5dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName|textAutoCorrect|textCapWords" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/Phone_No"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:hint="@string/Phone_no"
            android:inputType="number" />

        <TextView
            android:id="@+id/Already_Acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/already_account"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/SignUp_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/colorAccent"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>