<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/TitleBar"
        android:layout_width="match_parent"
        android:background="@color/colorLightGrey"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/stroke_square_layout"
            android:elevation="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/Back_Press"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:elevation="3dp"
                android:src="@drawable/ic_back_arrow"
                android:tint="@color/colorDarkGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:elevation="3dp"
                android:text="@string/edit_profile"
                android:textColor="@color/colorLightGreen"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Update_Btn"
        android:layout_below="@+id/TitleBar"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2.0dip"
                    android:text="@string/full_name"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13.0dip"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Full_Name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_corner_filled_background"
                    android:backgroundTint="@color/colorLightGrey"
                    android:inputType="textPersonName|textAutoCorrect|textCapWords"
                    android:padding="7dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2.0dp"
                    android:text="@string/Phone_no"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="13.0dip"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/Phone_No"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/round_corner_filled_background"
                    android:backgroundTint="@color/colorLightGrey"
                    android:inputType="numberDecimal"
                    android:padding="7dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Update_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:backgroundTint="@color/colorLightGreen"
        android:text="UPDATE"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
</RelativeLayout>