<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:backgroundTint="@color/colorOutline"
    tools:context=".Fragments.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ProfileImg_Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="4dp"
                    app:civ_border_color="@color/colorOutline"
                    app:civ_border_width="3dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="-27dp"
                    android:layout_marginEnd="23dp"
                    android:background="@drawable/circle_filled_layout"
                    android:contentDescription="@string/edit_profile"
                    android:elevation="2dp"
                    android:padding="0.5dp"
                    android:src="@drawable/ic_add_circle" />
            </LinearLayout>

            <Button
                android:id="@+id/Edit_Profile_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="0dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="5dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="30dp"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:src="@drawable/profile" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/My_Posts"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginLeft="15dp"-->
<!--                        android:layout_marginTop="5dp"-->
<!--                        android:text="@string/my_posts"-->
<!--                        android:textColor="@color/colorBlack"-->
<!--                        android:textSize="15sp" />-->
<!--                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@raw/mail" />

                    <TextView
                        android:id="@+id/Change_Pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/change_pass"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_local_phone" />

                    <TextView
                        android:id="@+id/Contact_Us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@raw/phone" />

                    <TextView
                        android:id="@+id/Sign_Out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/sign_out"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>